test/Fail/Issue4926b.err
Issue4926b.agda:25.16-22: error: [NotLeqSort]
Set (lsuc a) is not less or equal than Set a
when checking that the solution A x of metavariable _A_35 has the
expected type Set a
